Tables, connections and database update is done.

--- a/System for notebook management/ProjectR/appsettings.json
+++ b/System for notebook management/ProjectR/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ProjectR-8e29eb9e-0622-4084-8585-2b8d583cade2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-IV3EKSI\\SQLEXPRESS;Database=ProjectRDataBase;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
